<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">台灣旅遊景點</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="button_Search_Local">地區搜尋</string>
    <string name="button_Search_Keyword">關鍵字搜尋</string>
    <string name="button_weather">天氣預報</string>
    <string name="button_favor">我的最愛</string>
    <string name="button_around">鄰近搜尋</string>

    <string name="str_no">取消</string>
    <string name="str_ok">確定</string>
    
    <string name="str_ok_mail">回報</string>
    <string name="str_no_mail">返回</string>
    
    <string name="app_about">關於</string>
    <string name="app_exit">離開</string>
    <string name="app_email">回報問題</string>
    
    <string name="app_about_msg">提供大眾快速查詢景點</string>
    <string name="app_exit_msg">確定離開系統?</string>
    <string name="app_email_msg">回報問題及改善建議</string>
    
    <string name="app_connect">警告</string>
    <string name="app_connect_msg">偵測不到網路,請開啟網路</string>

    <string name="app_none_result">提示</string>
    <string name="app_none_result_msg">尚無景點資料</string>
    
    <string name="title_activity_main">首頁</string>
    
    <string name="name">景點名稱:</string>
    <string name="favor">加入我的最愛:</string>
    <string name="telephone">聯絡電話:</string>
    <string name="address">景點地址:</string>
    <string name="category">景點類型:</string>
    <string name="content">景點內容:</string>
    
    <string name="app_call">撥打電話</string>
    <string name="app_call_msg">確定撥打?</string>
    
    <string name="input_title">輸入景點關鍵字:</string>
    <string name="button_Search_Reset">重置</string>
    <string name="button_Search_Submit">查詢</string>
    
    <string name="app_no_context">提示</string>
    <string name="app_no_context_msg">請輸入搜尋內容</string>

    <string name="title_keyword">關鍵字搜尋</string>
    <string name="title_content">景點詳情</string>
    <string name="title_category_1">選擇縣市</string>
    <string name="title_category_2">選擇鄉鎮市區</string>
    <string name="title_category_3">相關景點</string>
	<string name="title_weather">天氣預報</string>

    <string name="title_map">景點位置</string>
    <string name="title_around">附近景點查詢</string>

    <string name="title_dialog">請稍後片刻</string>
    <string name="dialog_body">正在搜尋景點</string>

</resources>