<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/paper"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_Search_Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editText_Search"
            android:layout_below="@+id/editText_Search"
            android:layout_marginRight="23dp"
            android:background="@drawable/botton_small"
            android:text="@string/button_Search_Reset"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_Search_Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_Search_Reset"
            android:layout_alignBottom="@+id/button_Search_Reset"
            android:layout_alignRight="@+id/textView2_search"
            android:background="@drawable/botton_small"
            android:text="@string/button_Search_Submit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:textColor="@color/brown_deep"
            android:text="@string/input_title" />

        <EditText
            android:id="@+id/editText_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2_search"
            android:layout_below="@+id/textView2_search"
            android:ems="10"
            android:textColor="@color/dark"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </RelativeLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/activity_search" />

</TableLayout>