<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/paper"
    android:paddingLeft="6dip"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/brown_deep"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/listTextView1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/favorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="0dip"
            android:src="@drawable/star" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/brown_deep"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/listTextView2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

            <TextView
                android:id="@+id/listTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/brown_deep"
                android:textSize="18sp" >
            </TextView>

        <TextView
                android:id="@+id/listTextView3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="15sp" >
        </TextView>


        <ImageButton
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="0dip"
            android:src="@drawable/maps" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:textColor="@color/brown_deep"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/listTextView4_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/phoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="0dip"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/listTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/brown_deep"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:id="@+id/listTextView5_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brown"
            android:textSize="15sp" >
        </TextView>
    </LinearLayout>

</ScrollView>